src/terraform/03-vpc.tf

# https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_network
resource "google_compute_network" "main" {
  name                            = "main"
  routing_mode                    = "REGIONAL"
  auto_create_subnetworks         = false
  mtu                             = 1460
  delete_default_routes_on_create = false

  # https://developer.hashicorp.com/terraform/language/meta-arguments/depends_on
  depends_on = [
    google_project_service.compute,
    google_project_service.container
  ]
  
}
